# countrybot

./: .gitignore  CountryInformationBot.pptx  pyproject.toml  run.py
countrybot/: __init__.py  states.py
countrybot/handlers/: __init__.py  back.py  search.py  start.py
countrybot/handlers/country/: __init__.py  borders.py  coat_of_arms.py  flag.py  population.py
countrybot/handlers/search/: __init__.py  by_capital.py  by_code.py  by_language.py  by_name.py  by_selection.py
countrybot/keyboards/: __init__.py  back_keyboard.py  country_data.py  list_keyboard.py  population_keyboard.py  search_menu.py
countrybot/utils/: __init__.py  get_country.py  population.py
