[tool.poetry]
name = "countrybot"
version = "0.1.0"
description = "Country Information Bot"
authors = ["Tarlan Soltanov <tarlansoltanov@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytelegrambotapi = "^4.11.0"
aiohttp = "^3.8.4"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
